--- a/stocks.html
+++ b/stocks.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- External css style sheet-->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="stock.js"></script>
+    <script src="stock.js?rev=1"></script>
   </head>
   <body>
     <header class="bg-dark">
@@ -51,6 +50,24 @@
 			<button id="newsButton">News</button>
 		</div>
 	</div>
+  <table id="detailsTable">
+    <thead>
+      <tr>
+        <th>Close Price</th>
+        <th>Highest Price</th>
+        <th>Lowest Price</th>
+        <th>Number of Transactions</th>
+        <th>Open Price</th>
+        <th>OTC</th>
+        <th>Timestamp</th>
+        <th>Trading Volume</th>
+        <th>Volume Weighted Average Price</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+  <img id="stockImage" src="" alt="Stock Image">  
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
