--- a/home.html
+++ b/home.html
@@ -8,9 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- External css style sheet
+    <!-- External css style sheet-->
     <link rel="stylesheet" href="style.css">
-    -->
   </head>
   <body>	
    <!--NAVBAR MENU-->
