--- a/stocks.html
+++ b/stocks.html
@@ -4,11 +4,13 @@
     <title>STOCKS</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="stock.js?rev=1"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--  Include jQuery   Use the full version of jQuery (not slim) so it includes Ajax  -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="stock.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header class="bg-dark">
@@ -37,11 +39,11 @@
 	<div class="container mt-5">
 		<div class="row">
 			<div class="col">
-				<select id="exchangeSelect" class="form-control" value="--Select an Exchange--"></select>
+				<select id="exchangeSelect" class="form-control"></select>
 			</div>
 		</div>
 			<div class="col">
-				<select id="stockSelect" class="form-control" value="--Select a Stock--"></select>
+				<select id="stockSelect" class="form-control"></select>
 		</div>
 		<div>
 			<button id="detailsButton">Details</button>
@@ -50,7 +52,7 @@
 			<button id="newsButton">News</button>
 		</div>
 	</div>
-  <table id="detailsTable">
+  <table class="details-table">
     <thead>
       <tr>
         <th>Close Price</th>
@@ -67,15 +69,11 @@
     <tbody>
     </tbody>
   </table>
-  <img id="stockImage" src="" alt="Stock Image">  
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <footer class="bg-dark text-light py-3">
       <div class="container">
         <p class="text-center">&copy; 2023 | CSE383 FINAL | STOCKS</p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
