Updating atock.js and html files

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="#">Isela Juarez-Cendejas</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="T>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="T">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
