--- a/history.html
+++ b/history.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>History Lookup</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <style></style>
 </head>
+
 <body>
   <header class="bg-dark">
     <div class="container">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="#">History</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+          aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
@@ -35,24 +44,25 @@
   <input type="date" id="date" name="date"><br><br>
   <label for="max-lines">Max Number of Lines:</label>
   <input type="number" id="max-lines" name="max-lines"><br><br>
-  <button onclick="getPolygonRequests()">Get Polygon Requests</button>
+  <button id="getRequest">Get Polygon Requests</button>
 
-  <table id="results-table" style="display:none;">
+  <table id="results-table">
     <thead>
-    <tr>
-      <th>Date/Time of Request</th>
-      <th>Type</th>
-      <th>Stock</th>
-    </tr>
+      <tr>
+        <th>Date/Time of Request</th>
+        <th>Type</th>
+        <th>Stock</th>
+        <th>Actions</th>
+      </tr>
     </thead>
     <tbody id="results-table-body"></tbody>
-  </table>  
+  </table>
   <footer class="bg-dark text-light py-3">
     <div class="container">
       <p class="text-center">&copy; 2023 | CSE383 FINAL | HISTORY</p>
     </div>
   </footer>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+  <script src="history.js"></script>
+</body>
+
 </html>
