--- a/stocks.html
+++ b/stocks.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>STOCKS</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--  Include jQuery   Use the full version of jQuery (not slim) so it includes Ajax  -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="stock.js"></script>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header class="bg-dark">
+
+<head>
+  <title>STOCKS</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--  Include jQuery   Use the full version of jQuery (not slim) so it includes Ajax  -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="stock.js"></script>
+  <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+  <header class="bg-dark">
     <div class="container">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="#">Stock Information</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="T>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+          aria-controls="navbar" aria-expanded="false" aria-label="T">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="stocks.html">Stocks</a>
-              </li>
-              <li class="nav-item">
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="history.html">History</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col">
+        <select id="exchangeSelect" class="form-control"></select>
       </div>
-    </header>
-	<div class="container mt-5">
-		<div class="row">
-			<div class="col">
-				<select id="exchangeSelect" class="form-control"></select>
-			</div>
-		</div>
-			<div class="col">
-				<select id="stockSelect" class="form-control"></select>
-		</div>
-		<div>
-			<button id="detailsButton">Details</button>
-		</div>
-		<div>
-			<button id="newsButton">News</button>
-		</div>
-	</div>
-  <table class="details-table">
+    </div>
+    <div class="col">
+      <select id="stockSelect" class="form-control"></select>
+    </div>
+    <div>
+      <button id="detailsButton">Details</button>
+    </div>
+    <div>
+      <button id="newsButton">News</button>
+    </div>
+  </div>
+  <div id="tickerDetails">
+    <div>
+      <img id="tickerLogo" alt="">
+    </div>
+    <div>
+      <h1 id="tickerName"></h1>
+    </div>
+    <div>
+      <h2 id="tickerDescription"></h2>
+    </div>
+  </div>
+
+  <div id="tickerNews">
+    <div>
+      <h1 id="newsTitle"></h1>
+    </div>
+  <div>
+    <h2 id="newsDate"></h2>
+  </div>
+  <div>
+    <h3 id="newsSource"></h3>
+  </div>
+  <div>
+    <p id="newsDescription"></p>
+  </div>
+
+  <table>
     <thead>
       <tr>
         <th>Close Price</th>
@@ -66,14 +98,17 @@
         <th>Volume Weighted Average Price</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="details-table">
     </tbody>
   </table>
-    <footer class="bg-dark text-light py-3">
-      <div class="container">
-        <p class="text-center">&copy; 2023 | CSE383 FINAL | STOCKS</p>
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+
+  <footer class="bg-dark text-light py-3">
+    <div class="container">
+      <p class="text-center">&copy; 2023 | CSE383 FINAL | STOCKS</p>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+</body>
 </html>
