--- a/history.html
+++ b/history.html
@@ -2,26 +2,27 @@
 <html>
 
 <head>
-  <title>History Lookup</title>
+  <title>HISTORY LOOKUP</title>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--  Include jQuery   Use the full version of jQuery (not slim) so it includes Ajax  -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <style></style>
+  <script src="history.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="bg-dark">
     <div class="container">
       <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="#">History</a>
+        <a class="navbar-brand" href="#">Stock Information</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
-          aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          aria-controls="navbar" aria-expanded="false" aria-label="T">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
@@ -55,14 +56,13 @@
         <th>Actions</th>
       </tr>
     </thead>
-    <tbody id="results-table-body"></tbody>
+    <tbody id="results-table"></tbody>
   </table>
   <footer class="bg-dark text-light py-3">
     <div class="container">
       <p class="text-center">&copy; 2023 | CSE383 FINAL | HISTORY</p>
     </div>
   </footer>
-  <script src="history.js"></script>
 </body>
 
 </html>
