--- a/home.html
+++ b/home.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <title>Home</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <!-- External css style sheet-->
-    <link rel="stylesheet" href="style.css">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!--  Include jQuery   Use the full version of jQuery (not slim) so it includes Ajax  -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css">
   </head>
   <body>	
    <!--NAVBAR MENU-->
@@ -17,36 +19,44 @@
     <div class="container">
       <nav class="navbar navbar-expand-md navbar-dark">
         <a class="navbar-brand" href="#">Isela Juarez-Cendejas</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="T">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+          aria-controls="navbar" aria-expanded="false" aria-label="T">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
               <a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="stocks.html">Stocks</a>
-              </li>
-              <li class="nav-item">
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="history.html">History</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>    
-    <div>
-    <p>Hello this is my final project for CSE383</p>
+            </li>
+          </ul>
+        </div>
+      </nav>
     </div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </header>
+
+  <div class="position-relative">
+    <img src="stock2.jpg" alt="stock" class="img-fluid">
+    <div class="position-absolute top-50 start-50 translate-middle">
+      <h1 id="text-center">CSE383 Final Project</h1>
+      <h2 id="text-center">Isela Juarez-Cendejas</h2>
+      <h2 id="text-center">This website gives you info about stocks and you can also search for any history on any past stock inqueries!</h2>
+    </div>
+  </div>
+  
+  </figure>
     <footer class="bg-dark text-light py-3">
       <div class="container">
         <p class="text-center">&copy; 2023 | CSE383 FINAL | HOME</p>
       </div>
     </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>
   </body>
 </html>
