--- a/stocks.html
+++ b/stocks.html
@@ -14,7 +14,6 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="stock.js"></script>
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -72,16 +71,18 @@
 
   <div id="tickerNews">
     <div>
-      <h1 id="newsTitle"></h1>
+      <h1 id="tickerName"></h1>
     </div>
-  <div>
-    <h2 id="newsDate"></h2>
-  </div>
-  <div>
-    <h3 id="newsSource"></h3>
-  </div>
-  <div>
-    <p id="newsDescription"></p>
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>URL</th>
+          <th>Author</th>
+        </tr>
+      </thead>
+      <tbody class="news-table">
+      </tbody>
   </div>
 
   <table>
@@ -101,6 +102,20 @@
     <tbody class="details-table">
     </tbody>
   </table>
+  <!--
+  <table id="details-table">
+    <thead>
+      <tr>
+        <th>Close Price</th>
+        <th>Highest Price</th>
+        <th>Lowest Price</th>
+        <th>Number of Transactions</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+  -->
 
   <footer class="bg-dark text-light py-3">
     <div class="container">
